[tool.poetry]
name = "ml2024-es-335"
version = "0.1.0"
description = ""
authors = ["Prabodh Agarwal <prabodh1194@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
jax = {version = "0.4.11", extras = ["cpu"]}
jaxlib = "0.4.11"
ml-dtypes = "0.2.0"
jax-metal = "0.0.4"
sympy = "^1.12"
matplotlib = "^3.8.2"
pandas = "^2.1.4"


[tool.poetry.group.dev.dependencies]
ipython = "^8.20.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
